[update 26.1] Follow Paper upstream af06383 → 02ec8e958